# backsync

./: .gitignore  Cargo.toml  copy_commands.sh  notes.txt
client/: Cargo.toml
client/src/: flags.rs  main.rs
client/src/commands/: client.rs  command.rs  commands.rs  mod.rs  wallpaper.rs
client/src/daemon/: commands.rs  listener.rs  mod.rs  unix.rs  windows.rs
client/src/network/: messaging.rs  tcp.rs  tcp.rs.bak  udp.rs
client/src/network/tcp/: client.rs  mod.rs
client/src/system/: config.rs  files.rs  mod.rs  paths.rs  wallpaper.rs
client/src/utils/: mod.rs  paths.rs
server/: .gitignore  Cargo.toml
server/migrations/: 20241009170015_add_clients_table.down.sql  20241009170015_add_clients_table.up.sql  20241009170015_add_stream_table.down.sql  20241009170015_add_stream_table.up.sql  20241009170442_add_wallpaper_table.down.sql  20241009170442_add_wallpaper_table.up.sql  20241017173154_locked_field_to_clients.down.sql  20241017173154_locked_field_to_clients.up.sql  20241019121434_add_origin_to_wallpaper.down.sql  20241019121434_add_origin_to_wallpaper.up.sql  20241019154227_syncwall.down.sql  20241019154227_syncwall.up.sql
server/src/: flags.rs  main.rs
server/src/commands/: client.rs  command.rs  commands.rs  mod.rs  server.rs
server/src/database/: clients.rs  mod.rs  stream.rs  wallpaper.rs
server/src/http/: error.rs  routes.rs  server.rs  websocket.rs
server/src/http/routes/: clients.rs  images.rs  streams.rs  system.rs  wallhaven.rs  wallpaper.rs
server/src/network/: messaging.rs  mod.rs  tcp.rs  udp.rs
server/src/network/tcp/: data.rs  mod.rs  server.rs
server/src/system/: config.rs  files.rs  logger.rs  mod.rs  oldfiles.rs
server/src/system/files/: mod.rs  wallpaper.rs
server/src/utils/: mod.rs
server/static/: index.html
server/static.bak/: index.html
server/static.bak/pages/: papers.html
server/static/css/: main.css
server/static/js/: main.js
server/static/pages/: papers.html
server/web/: package-lock.json  package.json  svelte.config.js
server/web/src/: app.html
server/web/src/lib/: utils.js
server/web/src/lib/components/: Client.svelte  ClientBar.svelte  Gallery.svelte  LocalGallery.svelte  LocalThumb.svelte  RadioButton.svelte  ScrollToTop.svelte  SearchParams.svelte  Sidebar.svelte  ToggleButton.svelte  WallhavenGallery.svelte  Wallpaper.svelte  WallpaperPreview.svelte
server/web/src/lib/stores/: clients.js  searchparams.js  settings.js  upload.js
server/web/src/routes/: +layout.js  +layout.svelte  +page.js  +page.svelte
server/web/src/routes/archive/: +page.js
server/web/src/routes/clients/: +page.svelte
server/web/src/routes/collections/: +page.js  +page.svelte
server/web/src/routes/collections/[id]/: +page.js  +page.svelte
server/web/src/routes/local/: +page.svelte
server/web/src/routes/peers/: +page.svelte
server/web/src/routes/search/: +page.js  +page.svelte
server/web/src/routes/settings/: +page.svelte
server/web/src/routes/wallhaven/: +page.js  +page.svelte
(+23 files in other folders)
