[package]
name = "backsync"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.19", features = ["derive", "env"] }
gethostname = "0.5.0"
homedir = "0.3.4"
log = "0.4.22"
once_cell = "1.20.2"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
setwallpaper = "0.1.1"
shlex = "1.3.0"
simplelog = "0.12.2"
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.19"
