[package]
name = "backsync-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.19", features = ["derive", "env"] }
local-ip-address = "0.6.3"
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
simplelog = "0.12.2"
tokio = { version = "1.40.0", features = ["full"] }
