[package]
name = "backsync-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
axum = "0.7.7"
clap = { version = "4.5.19", features = ["derive", "env"] }
homedir = "0.3.4"
hyper = "1.4.1"
local-ip-address = "0.6.3"
log = "0.4.22"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
server_nano = "0.2.1"
simplelog = "0.12.2"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.19"
tower-http = { version = "0.6.1", features = ["fs"] }
