[package]
name = "backsync-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
axum = { version = "0.7.7", features = ["multipart", "query", "ws"] }
clap = { version = "4.5.19", features = ["derive", "env"] }
homedir = "0.3.4"
hyper = "1.4.1"
image = "0.25.2"
local-ip-address = "0.6.3"
log = "0.4.22"
once_cell = "1.20.2"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
server_nano = "0.2.1"
simplelog = "0.12.2"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.19"
tower-http = { version = "0.6.1", features = ["cors", "trace", "fs"] }
tower = { version = "0.5.1" }
axum-extra = "0.4"
tokio-tungstenite = "0.18"
futures = "0.3"
reqwest = { version = "0.12.8", features = ["json"] }
url = "2.5.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"]}
tracing-log = "0.2.0"
warp = "0.3"
warp-embed = "0.5"
rust-embed = "8.5.0"
mime_guess = "2.0.5"
